PS-1111: update test jdbc url to refer to docker container directly instead of localhost which doesn't work on the mac (docker-machine).